# LungScore

./: .gitignore  LICENSE  README.md  dataset.py  inference_mhub.py  lung_segmentation.py  main.py  model.py  preprocessing.py  requirements.txt  setup.cfg  tdev_ids.py  training.py  utils_mhub.py
AI_LUNG_HEALTH.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
AI_lungage.egg-info/: PKG-INFO  SOURCES.txt
LungHealth/: run.py
LungHealth/inference/: lung_health_inference_pipeline.py
LungHealth/models/: __init__.py  model.py
LungHealth/preprocessing/: dcm_to_nrrd_pipeline.py  lung_preprocessing.py
LungHealth/training/: main_pipeline.py  training.py
LungHealth/utils/: LungHealthCatefgories.py  utils.py
LungScore/: run.py
LungScore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
LungScore/datasets/: dataset.py
LungScore/inference/: inference_pipeline.py  lung_health_inference_pipeline.py
LungScore/lung_cancer_data/: tracerX_blankingtumor.py  tracerX_tumsliceloc.py
LungScore/models/: __init__.py  model.py
LungScore/preprocessing/: __init__.py  extract_lung_pipeline.py  resample_nrrd.py
LungScore/training/: main_pipeline.py  training_pipeline.py
config/: dcm_to_nrrd_pipeline.yaml  lung_segmentation_pipeline.yaml  testing_pipeline.yaml  training_pipeline.yaml
lungage/: inference_mhub.py  lung_health_scoring.py  run.py
lungage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
stats_analysis/: Boxplots.R  COX.R  Causespecificdeath_cont.R  KM.R  KM_incidence.R  Linearmodels_association.R  Odds_ratio.R  cox.R  odds_ratio.R  saliencymaps.py
(+21 files in other folders)
