[metadata]
name = LungScore
version = 0.1.1
author = "Ahmed Adly - ahassan12@bwh.harvard.edu"
description = "AI Lung Score Quantification"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    lungmask==0.2.14
    matplotlib==3.5.2
    monai==1.3.0
    nibabel==5.2.1
    numpy==1.26.4
    opencv_python==4.7.0.68
    opencv_python_headless==4.7.0.72
    pandas==1.4.4
    pydicom==2.4.4
    PyYAML==6.0.1
    scikit_learn==1.0.2
    seaborn==0.11.2
    SimpleITK==2.3.1
    torch==2.0.1
    torchmetrics==0.11.0
    torchvision==0.15.2
    wandb==0.13.9

[options.package_data]
example = 
* = README.md